# MJPEGazer

./: .dockerignore  .gitignore  README.md  dev.requirements.txt  docker-compose.yml  main.py  pyproject.toml  requirements.txt
docker/: Dockerfile  build.yml  gunicorn_config.py
docs/: DEVELOPMENT.md
mjpegazer/: __init__.py
mjpegazer/core/: capture.py  mjpeg.py  rest.py
mjpegazer/utils/: constants.py  development.py  loggers.py  loggers.pyi
nginx/: docker-compose.yml
nginx/config/conf.d/: 0-upstream.conf  10-http.conf
nginx/config/includes/: proxy.conf
nginx/docker/: service.yml
nginx/html/: index.html
rtspweb/core/: __init__.py  capture.py  mjpeg.py  rest.py
rtspweb/utils/: __init__.py  constants.py  development.py  exceptions.py  loggers.py  loggers.pyi
tests/: test_health_check.py  test_mjpeg.py
utils/: __init__.py  constants.py  exceptions.py  logger_utils.py  video.py
